k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hcm
spec:
  selector:
    app: hcm-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
